manifests/k8smultiarcher-kind.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: k8smultiarcher
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8smultiarcher
  namespace: k8smultiarcher
  labels:
    app.kubernetes.io/instance: k8smultiarcher
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: k8smultiarcher
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: k8smultiarcher
    spec:
      serviceAccountName: k8smultiarcher
      containers:
        - name: k8smultiarcher
          image: ghcr.io/programmerq/k8smultiarcher:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8443
          volumeMounts:
            - name: k8smultiarcher-cert
              mountPath: /etc/certs
              readOnly: true
      volumes:
        - name: k8smultiarcher-cert
          secret:
            secretName: k8smultiarcher-cert
---
apiVersion: v1
kind: Service
metadata:
  name: k8smultiarcher
  namespace: k8smultiarcher
  labels:
    app.kubernetes.io/instance: k8smultiarcher
spec:
  selector:
    app.kubernetes.io/instance: k8smultiarcher
  ports:
    - name: https
      port: 443
      targetPort: 8443
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: k8smultiarcher-webhook
  annotations:
    cert-manager.io/inject-ca-from: k8smultiarcher/k8smultiarcher
webhooks:
  - name: k8smultiarcher.k8smultiarcher.svc
    admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: k8smultiarcher
        namespace: k8smultiarcher
        path: "/mutate"
    rules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE", "UPDATE"]
        resources: ["pods"]
      - apiGroups: ["apps"]
        apiVersions: ["v1"]
        operations: ["CREATE", "UPDATE"]
        resources: ["daemonsets"]
    failurePolicy: Ignore
    reinvocationPolicy: IfNeeded
    sideEffects: None
    timeoutSeconds: 30
